--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,19 +8,60 @@
     android:orientation = "vertical">
 
     <LinearLayout
-        android:layout_width ="match_parent"
-        android:layout_height ="wrap_content"
-        android:background= "@android:color/holo_blue_light"
-        android:weightSum = "1">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_light"
+        android:weightSum="1">
 
         <Button
             android:id="@+id/button_view"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width ="wrap_content"
-            android:layout_height ="wrap_content"
-            android:layout_gravity ="right"
-            android:onClick ="changeView"
-            android:text = "View"></Button>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:onClick="toggle"
+            android:text="View"></Button>
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="trackMyLocation"
+            android:text="Track" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="clearMarkers"
+            android:text="Clear" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_blue_light"
+        android:weightSum="1">
+
+        <EditText
+            android:id="@+id/editText_addr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name" />
+
+        <Button
+            android:id="@+id/Search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onSearch"
+            android:text="Search" />
 
     </LinearLayout>
 
